# amiagi

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_RELEASE_v0.1.3.md  GITHUB_RELEASE_v0.1.4.md  GITHUB_RELEASE_v0.2.0.md  GITHUB_RELEASE_v1.0.3.md  GITHUB_RELEASE_v1.1.0.md  GITHUB_RELEASE_v1.2.0.md  GITHUB_RELEASE_v1.3.0.md  GITHUB_RELEASE_v1.3.1.md  LICENSE  PR_DRAFT.md  README.md  README.pl.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_UNRELEASED.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  ROADMAP_v1.0.md  ROUTER_ENGINE_EXTRACTION_PLAN.md  SECURITY.md  WEB_INTERFACE.md  biznes-task.md  czego_brakuje_amiagi.md  (+6 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
amiagi-my-work/: new_tool.py  plan_zadania.txt  wprowadzenie.md
benchmarks/code_generation/: advanced.yaml  basic.yaml
benchmarks/code_review/: advanced.yaml  basic.yaml
benchmarks/planning/: advanced.yaml  basic.yaml
benchmarks/research/: advanced.yaml  basic.yaml
config/: budget_defaults.yaml  communication_rules.json  permissions.json  quota_defaults.yaml  shell_allowlist.json  shell_allowlist.jsonl
config/team_templates/: data_pipeline.yaml  fullstack.yaml  team_backend.yaml  team_research.yaml
scripts/: migrate_i18n.py  migrate_skills_to_db.py  setup_venv.sh
skills/kastor/: README.md  code_review.md  error_diagnosis.md  plan_analysis.md
skills/polluks/: README.md  document_analysis.md  python_development.md  web_research.md
tests/: test_ab_test_runner.py  test_activity_logger.py  test_admin_bootstrap.py  test_agent_domain.py  test_agent_factory.py  test_agent_factory_blueprint.py  test_agent_permissions_routes.py  test_agent_registry.py  test_agent_runtime.py  test_agent_stream.py  test_agent_wizard.py  test_agent_wizard_web.py  test_agents_web_ui.py  test_alert_manager.py  test_audit_chain.py  test_audit_client_side.py  test_auth_middleware.py  test_auth_routes.py  test_benchmark_suite.py  test_benchmark_suite_yaml.py  test_budget_manager.py  test_budget_manager_extended.py  test_budget_page_extended.py  test_budget_routes.py  test_chat_service.py  test_ci_adapter.py  test_ci_adapter_github.py  test_cli_corrective_prompts.py  test_cli_runtime_flow.py  test_communication_protocol.py  test_context_compressor.py  test_context_window_manager.py  test_cost_tracking.py  test_cron_page_extended.py  test_cron_scheduler.py  test_cross_agent_memory.py  test_dashboard_server.py  test_dashboard_teams_and_cli.py  test_discussion_sync.py  test_document_ingester.py  (+132 more)
(+330 files in other folders)
