[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amiagi"
version = "0.1.1"
description = "Local framework for evaluating LLM autonomy with controlled tool-use and audit logs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["textual==0.89.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
amiagi = "amiagi.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
