[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amiagi"
version = "1.0.3"
description = "Local framework for evaluating LLM autonomy with controlled tool-use, multi-backend model support, and audit logs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["textual==0.89.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
amiagi = "amiagi.main:main"
amiagi-ci = "amiagi.infrastructure.ci_adapter:cli_main"
amiagi-plugin = "amiagi.application.plugin_loader:plugin_cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"amiagi.i18n" = ["locales/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
