[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amiagi"
version = "1.2.0"
description = "Local framework for evaluating LLM autonomy with controlled tool-use, multi-backend model support, and audit logs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "textual==0.89.1",
    "markitdown>=0.0.6",
    "pypdf>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "PyJWT>=2.8",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "watchfiles>=0.21",
    "httpx>=0.27",
]

[project.scripts]
amiagi = "amiagi.main:main"
amiagi-ci = "amiagi.infrastructure.ci_adapter:cli_main"
amiagi-plugin = "amiagi.application.plugin_loader:plugin_cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"amiagi.i18n" = ["locales/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
extraPaths = ["src"]
